--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
 
     <ImageView
+        android:id="@+id/toolbar_img"
         android:layout_width="@dimen/_90sdp"
         android:layout_height="@dimen/_45sdp"
         android:layout_gravity="center"
-        android:src="@drawable/nubella_app_image"/>
+        android:src="@drawable/nubella_app_image"
+        android:visibility="visible"/>
+
+
+    <views.textview.TypefaceTextView
+        android:id="@+id/title_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="Shop By Size"
+        android:textColor="@color/colorPrimary"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
+
 
     <!--<View-->
         <!--android:layout_width="match_parent"-->
@@ -16,4 +31,4 @@
         <!--android:background="@color/colorPrimary"/>-->
 
 
-</LinearLayout>
+</FrameLayout>
