--- a/app/src/main/res/layout/checkout_items_layout.xml
+++ b/app/src/main/res/layout/checkout_items_layout.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_80sdp"
+        android:layout_height="@dimen/_100sdp"
         android:orientation="horizontal"
         android:padding="@dimen/_5sdp"
         android:background="@color/muted_white">
@@ -45,76 +45,9 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-          <views.textview.TypefaceTextView
-              android:id="@+id/prod_name"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textColor="@color/colorPrimary"
-              geekui:customTypeface="fonts/CoreSansDBold.otf"
-              android:textSize="@dimen/medium_text"/>
 
+                <include layout="@layout/product_name_details"/>
 
-            <views.textview.TypefaceTextView
-                android:id="@+id/prod_seller"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="@color/muted_grey"
-                geekui:customTypeface="fonts/CoreSansDRegular.otf"
-                android:textSize="@dimen/small_text"
-                android:layout_marginTop="@dimen/_3sdp"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/_3sdp">
-
-                <views.textview.TypefaceTextView
-                    android:id="@+id/actual_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="4000"
-                    android:textColor="@color/colorPrimary"
-                    geekui:customTypeface="fonts/CoreSansDBold.otf"
-                    android:textSize="@dimen/medium_text"/>
-
-                <views.textview.TypefaceTextView
-                    android:id="@+id/total_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="5000"
-                    android:textColor="@color/muted_grey"
-                    geekui:customTypeface="fonts/CoreSansDBold.otf"
-                    android:textSize="@dimen/small_text"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:background="@drawable/strike_back_text"/>
-
-                <views.textview.TypefaceTextView
-                    android:id="@+id/cut_off_precent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="75 % OFF"
-                    android:textColor="@color/colorAccent"
-                    geekui:customTypeface="fonts/CoreSansDBold.otf"
-                    android:textSize="@dimen/medium_text"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                   />
-
-
-            </LinearLayout>
-
-
-                <views.textview.TypefaceTextView
-                    android:id="@+id/delivery_details"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Delivery : Free (with in 4-7 days)"
-                    android:textColor="@color/muted_grey"
-                    geekui:customTypeface="fonts/CoreSansDRegular.otf"
-                    android:textSize="@dimen/small_text"
-                    android:layout_marginTop="@dimen/_3sdp"/>
 
          </LinearLayout>
 
