--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -5,30 +5,16 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center">
 
+
+
     <ImageView
         android:id="@+id/toolbar_img"
-        android:layout_width="@dimen/_90sdp"
-        android:layout_height="@dimen/_45sdp"
-        android:layout_gravity="center"
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="@dimen/_25sdp"
+        android:layout_gravity="left"
         android:src="@drawable/nubella_app_image"
-        android:visibility="visible"/>
-
-
-    <views.textview.TypefaceTextView
-        android:id="@+id/title_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="Shop By Size"
-        android:textColor="@color/colorPrimary"
-        android:layout_gravity="center"
-        android:visibility="gone"
-        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
-
-
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="@dimen/_1sdp"-->
-        <!--android:background="@color/colorPrimary"/>-->
+        android:visibility="visible"
+        />
 
 
 </FrameLayout>
