--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,17 @@
     <color name="layout_back_full">#F5F5F5</color>
 
 
+    <color name="filtersfab">#ecf0f1</color>
+    <color name="filters_header">#303f9f</color>
+    <color name="filters_buttons">#ff4081</color>
+    <color name="filters_buttons_selected">#c2185b</color>
+    <color name="filters_chips">#b3e5fc</color>
+
+    <color name="orange">#ff5722</color>
+    <color name="brown">#795548</color>
+    <color name="bg">#f5f5f5</color>
+    <color name="bgnew">#464756</color>
+
+
 
 </resources>
