--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -38,9 +38,9 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fillViewport="false"
-            android:layout_marginBottom="@dimen/_40sdp">
+            android:layout_marginBottom="@dimen/_120sdp">
 
 
         <LinearLayout
@@ -57,19 +57,7 @@
       />
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/muted_white"
-            android:padding="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:orientation="vertical">
 
-         <include layout="@layout/layout_price_details"/>
-
-
-
-        </LinearLayout>
 
 
 
@@ -77,6 +65,23 @@
 
 
         </ScrollView>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/muted_white"
+            android:padding="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:orientation="vertical"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="@dimen/_40sdp">
+
+            <include layout="@layout/layout_price_details"/>
+
+
+
+        </LinearLayout>
 
 
 
@@ -87,10 +92,10 @@
         android:layout_gravity="bottom"
         >
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp"
-        android:background="@color/colorPrimary"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_3sdp"
+            android:background="@drawable/shadow"/>
 
 
     <LinearLayout
