--- a/app/src/main/res/layout/checkout_items_layout.xml
+++ b/app/src/main/res/layout/checkout_items_layout.xml
@@ -128,15 +128,16 @@
             android:layout_gravity="center|right"
             android:gravity="right">
 
+            <views.textview.TypefaceTextView
+                android:id="@+id/remove_product"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="REMOVE"
+                android:textColor="@color/colorPrimary"
+                geekui:customTypeface="fonts/CoreSansDRegular.otf"
+                android:textSize="@dimen/medium_text"
+                android:gravity="right"/>
 
-        <ImageView
-            android:id="@+id/remove_product"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:background="@drawable/ic_delete"
-            android:padding="@dimen/_5sdp"
-            android:layout_gravity="center"
-            android:layout_marginRight="@dimen/_5sdp"/>
 
         </LinearLayout>
 
